--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -48,10 +48,10 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py qrave_toolbar.py qrave_toolbar_dialog.py
+python_files: __init__.py qrave_toolbar.py dockwidget.py
 
 # The main dialog file that is loaded (not compiled)
-main_dialog: qrave_toolbar_dialog_base.ui
+main_dialog: dockwidget_base.ui
 
 # Other ui files for dialogs you create (these will be compiled)
 compiled_ui_files: 
