--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,8 @@
     },
     "python.linting.pylintArgs": [
         "--extension-pkg-whitelist=PyQt5,qgis,db_manager",
-        // "--disable=all",
-        // "--enable=F,E,unreachable,duplicate-key,unnecessary-semicolon,global-variable-not-assigned,unused-variable,binary-op-exception,bad-format-string,anomalous-backslash-in-string,bad-open-mode",
+        "--disable=all",
+        "--enable=F,E,unreachable,duplicate-key,unnecessary-semicolon,global-variable-not-assigned,unused-variable,binary-op-exception,bad-format-string,anomalous-backslash-in-string,bad-open-mode",
         // Relative paths have a problem in pylint. We'll try not to use them but.....
         "--disable=E0402"
     ],
