--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
     "defaultSettings": {
         "initialized": false,
-        "projectPath": null,
         "loadDefaultView": true,
         "basemapsInclude": true,
         "lastDigestSync": null,
@@ -11,6 +10,7 @@
     "constants": {
         "logCategory": "QRAVE",
         "settingsCategory": "QRAVE",
+        "project_filepath": "qrave_project_path",
         "businessLogicDir": "blXML",
         "symbologyDir": "symbology",
         "digestSyncFreqHours": 24,
