--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -48,23 +48,23 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py qrave_toolbar.py dockwidget.py
+python_files: __init__.py ./src/qrave_toolbar.py
 
 # The main dialog file that is loaded (not compiled)
-main_dialog: dockwidget_base.ui
+main_dialog: ./src/ui/dockwidget.ui
 
 # Other ui files for dialogs you create (these will be compiled)
-compiled_ui_files: 
+compiled_ui_files: ./src/ui/dock_widget.ui ./src/ui/meta_widget.ui ./src/ui/meta_widget.ui ./src/ui/about_dialog.ui ./src/ui/options_dialog.ui ./src/ui/progress_dialog.ui
 
 # Resource file(s) that will be compiled
-resource_files: resources.qrc
+resource_files: ./src/resources.qrc
 
 # Other files required for the plugin
-extras: metadata.txt icon.png Images
+extras: metadata.txt
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
-extra_dirs:
+extra_dirs: src
 
 # ISO code(s) for any locales (translations), separated by spaces.
 # Corresponding .ts files must exist in the i18n directory
