fixing deploy script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,5 +13,13 @@
             "port": 5678,
             "host": "localhost",
         },
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal"
+        },
     ]
 }
