lots of little fixes

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -54,7 +54,7 @@ python_files: __init__.py ./src/qrave_toolbar.py
 main_dialog: ./src/ui/dockwidget.ui
 
 # Other ui files for dialogs you create (these will be compiled)
-compiled_ui_files: ./src/ui/dock_widget.ui ./src/ui/meta_widget.ui ./src/ui/meta_widget.ui ./src/ui/about_dialog.ui ./src/ui/options_dialog.ui ./src/ui/progress_dialog.ui
+compiled_ui_files: ./src/ui/dock_widget.ui ./src/ui/meta_widget.ui ./src/ui/meta_widget.ui ./src/ui/about_dialog.ui ./src/ui/options_dialog.ui
 
 # Resource file(s) that will be compiled
 resource_files: ./src/resources.qrc
