--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,15 @@
             "port": 5678,
             "host": "localhost",
         },
+        // {
+        //     // You need to enable QGIS VSCode debugger plugin 
+        //     // Before this will work
+        //     "name": "QGIS Debug (multithread)",
+        //     "type": "python",
+        //     "request": "attach",
+        //     "port": 5679,
+        //     "host": "localhost",
+        // },
         {
             "name": "Python: Current File",
             "type": "python",
