--- a/config.json
+++ b/config.json
@@ -5,12 +5,13 @@
         "basemapsInclude": true,
         "lastDigestSync": null,
         "lastResourceSync": null,
+        "lastBrowsePath": null,
         "basemapRegion": "United States"
     },
     "constants": {
         "logCategory": "QRAVE",
         "settingsCategory": "QRAVE",
-        "project_filepath": "qrave_project_path",
+        "qrave_projects": "qrave_projects",
         "businessLogicDir": "blXML",
         "symbologyDir": "symbology",
         "digestSyncFreqHours": 24,
