--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,8 @@
         "--enable=F,E,unreachable,duplicate-key,unnecessary-semicolon,global-variable-not-assigned,unused-variable,binary-op-exception,bad-format-string,anomalous-backslash-in-string,bad-open-mode",
         // Relative paths have a problem in pylint. We'll try not to use them but.....
         "--disable=E0402"
+    ],
+    "python.analysis.extraPaths": [
+        "${workspaceRoot}"
     ]
 }
