store version in settings to detect a version change #18

--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
         "lastDigestSync": null,
         "lastResourceSync": null,
         "lastBrowsePath": null,
+        "pluginVersion": null,
         "basemapRegion": "United States"
     },
     "constants": {
