giving people the choice to opt-out of autoupdates fixes #23

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
         "initialized": false,
         "loadDefaultView": true,
         "basemapsInclude": true,
+        "autoUpdate": true,
         "lastDigestSync": null,
         "lastResourceSync": null,
         "lastBrowsePath": null,
