--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
-urllib3==1.25.9
+urllib3>=1.26.5
 virtualenv==20.4.3
 wrapt==1.12.1
 wxPython==4.0.7
