--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
         "businessLogicDir": "blXML",
         "symbologyDir": "symbology",
         "digestSyncFreqHours": 24,
-        "warehouseUrl": "https://data.riverscapes.xyz/#",
-        "webUrl": "https://rave.riverscapes.xyz",
+        "warehouseUrl": "https://data.riverscapes.net/#",
+        "webUrl": "https://rave.riverscapes.net",
         "issueUrl": "https://github.com/Riverscapes/QRAVEPlugin/issues",
         "changelogUrl": "https://github.com/Riverscapes/QRAVEPlugin/releases",
-        "resourcesUrl": "https://xml.riverscapes.xyz/"
+        "resourcesUrl": "https://xml.riverscapes.net/"
     }
 }
