--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,34 +1,32 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "QGIS Debug",
+      "type": "python",
+      "request": "attach",
+      "connect": {
+        "host": "localhost",
+        "port": 5678
+      },
+      "pathMappings": [
         {
-            // You need to enable QGIS VSCode debugger plugin 
-            // Before this will work
-            "name": "QGIS Debug",
-            "type": "python",
-            "request": "attach",
-            "port": 5678,
-            "host": "localhost",
-        },
-        // {
-        //     // You need to enable QGIS VSCode debugger plugin 
-        //     // Before this will work
-        //     "name": "QGIS Debug (multithread)",
-        //     "type": "python",
-        //     "request": "attach",
-        //     "port": 5679,
-        //     "host": "localhost",
-        // },
-        {
-            "name": "Python: Current File",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "cwd": "${workspaceFolder}",
-            "console": "integratedTerminal"
-        },
-    ]
+          "localRoot": "${workspaceFolder}",
+          "remoteRoot": "${workspaceFolder}",
+        }
+      ],
+      "justMyCode": true
+    },
+    {
+      "name": "Python: Current File",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal"
+    },
+  ]
 }
