View in Warehouse menu item is broken #111

--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
         "businessLogicDir": "blXML",
         "symbologyDir": "symbology",
         "digestSyncFreqHours": 24,
-        "warehouseUrl": "https://data.riverscapes.net/#",
+        "warehouseUrl": "https://data.riverscapes.net",
         "webUrl": "https://viewer.riverscapes.net",
         "issueUrl": "https://github.com/Riverscapes/QRAVEPlugin/issues",
         "changelogUrl": "https://github.com/Riverscapes/QRAVEPlugin/releases",
