--- a/config.json
+++ b/config.json
@@ -21,11 +21,13 @@
         "issueUrl": "https://github.com/Riverscapes/QRAVEPlugin/issues",
         "changelogUrl": "https://github.com/Riverscapes/QRAVEPlugin/releases",
         "resourcesUrl": "https://xml.riverscapes.net/",
-        "apiUrl": "https://api.riverscapes.net/",
-        "apiAuth": {
-          "domain": "riverscapes.auth0.com",
+        "DE_API_Url": "https://api.riverscapes.net/",
+        "DE_API_Auth": {
+          "audience": "https://api.riverscapes.net",
+          "domain": "auth.riverscapes.net",
           "clientId": "pH1ADlGVi69rMozJS1cixkuL5DMVLhKC",
           "scope": "openid",
+          "success_url": "https://data.riverscapes.net/login_success",
           "port": 4721
         }
     }
