--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,23 +6,23 @@
   "configurations": [
     {
       "name": "QGIS Debug",
-      "type": "python",
+      "type": "debugpy",
       "request": "attach",
       "connect": {
         "host": "localhost",
         "port": 5678
       },
-      "pathMappings": [
-        {
-          "localRoot": "${workspaceFolder}",
-          "remoteRoot": "${workspaceFolder}",
-        }
-      ],
+      // "pathMappings": [
+      //   {
+      //     "localRoot": "${workspaceFolder}",
+      //     "remoteRoot": "${workspaceFolder}",
+      //   }
+      // ],
       "justMyCode": true
     },
     {
       "name": "Python: Current File",
-      "type": "python",
+      "type": "debugpy",
       "request": "launch",
       "program": "${file}",
       "cwd": "${workspaceFolder}",
