--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -51,10 +51,10 @@ plugin_path:
 python_files: __init__.py ./src/qrave_toolbar.py
 
 # The main dialog file that is loaded (not compiled)
-main_dialog: ./src/ui/dockwidget.ui
+main_dialog: 
 
 # Other ui files for dialogs you create (these will be compiled)
-# compiled_ui_files: ./src/ui/dock_widget.ui
+compiled_ui_files: 
 
 # Resource file(s) that will be compiled
 resource_files: ./src/resources.qrc
