--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
         "lastResourceSync": null,
         "lastBrowsePath": null,
         "pluginVersion": null,
-        "basemapRegion": "United States"
+        "basemapRegion": "United States",
+        "dockLocation": "left"
     },
     "constants": {
         "logCategory": "Riverscapes Viewer",
