Add Local folder for Business Logic Search #191

--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
         "lastBrowsePath": null,
         "pluginVersion": null,
         "basemapRegion": "United States",
-        "dockLocation": "left"
+        "dockLocation": "left",
+        "localBLFolder": null
     },
     "constants": {
         "logCategory": "Riverscapes Viewer",
